<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.github.windchopper.tools</groupId>
    <artifactId>process-browser</artifactId>
    <version>2.1</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>15</java.version>
        <kotlin.version>1.4.21</kotlin.version>
        <kotlin.ext.version>1.4.2</kotlin.ext.version>
        <javafx.version>15.0.1</javafx.version>
        <common.version>1.1</common.version>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>jakarta.enterprise</groupId>
                <artifactId>jakarta.enterprise.cdi-api</artifactId>
                <version>3.0.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-stdlib-jdk8</artifactId>
            <version>${kotlin.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-reflect</artifactId>
            <version>${kotlin.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlinx</groupId>
            <artifactId>kotlinx-coroutines-core</artifactId>
            <version>${kotlin.ext.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna-platform</artifactId>
            <version>5.2.0</version>
        </dependency>
        <dependency>
            <groupId>org.jboss</groupId>
            <artifactId>jandex</artifactId>
            <version>2.2.2.Final</version>
        </dependency>
        <dependency>
            <groupId>org.jboss.weld.se</groupId>
            <artifactId>weld-se-core</artifactId>
            <version>4.0.0.Final</version>
        </dependency>
        <dependency>
            <groupId>com.github.windchopper</groupId>
            <artifactId>common-fx</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>com.github.windchopper</groupId>
            <artifactId>common-fx-cdi</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>com.github.windchopper</groupId>
            <artifactId>common-cdi</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>com.github.windchopper</groupId>
            <artifactId>common-preferences</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>com.github.windchopper</groupId>
            <artifactId>common-util</artifactId>
            <version>${common.version}</version>
        </dependency>
    </dependencies>
    <profiles>
        <profile>
            <id>lib</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-dependency-plugin</artifactId>
                        <version>2.8</version>
                        <executions>
                            <execution>
                                <phase>prepare-package</phase>
                                <goals>
                                    <goal>copy-dependencies</goal>
                                </goals>
                                <configuration>
                                    <outputDirectory>${project.build.directory}/lib</outputDirectory>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>win</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-antrun-plugin</artifactId>
                        <version>3.0.0</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>run</goal>
                                </goals>
                                <phase>package</phase>
                                <configuration>
                                    <target>
                                        <copy todir="${project.build.directory}/lib">
                                            <fileset dir="${project.build.directory}" includes="*.jar"/>
                                        </copy>
                                    </target>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>3.0.0</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <phase>package</phase>
                                <configuration>
                                    <executable>${java.home}/bin/jpackage</executable>
                                    <environmentVariables>
                                        <PATH>C:\wix</PATH>
                                    </environmentVariables>
                                    <commandlineArgs>
                                        --icon ${project.basedir}/src/main/windows/Show-All-Views-50.ico
                                        --app-version ${project.version}
                                        --name process-browser
                                        --license-file ${project.basedir}/LICENSE
                                        --vendor com.github.windchopper
                                        --input ${project.build.directory}/lib
                                        --dest ${project.build.directory}
                                        --main-jar ${project.artifactId}-${project.version}.${project.packaging}
                                        --main-class com.github.windchopper.tools.process.browser.Application
                                        --java-options "--module-path $APPDIR"
                                        --java-options "--add-modules javafx.controls,javafx.graphics,javafx.fxml"
                                        --win-dir-chooser
                                        --win-menu
                                    </commandlineArgs>
                                    <!--один хер в установленном уже приложении надо редактировать app/*.cfg,
                                        чтобы удалить лишний параметр module-path-->
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    <build>
        <plugins>
            <plugin>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-maven-plugin</artifactId>
                <version>${kotlin.version}</version>
                <dependencies>
                    <dependency>
                        <groupId>org.jetbrains.kotlin</groupId>
                        <artifactId>kotlin-maven-allopen</artifactId>
                        <version>${kotlin.version}</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <id>compile</id>
                        <!--suppress KotlinMavenPluginPhase-->
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <jvmTarget>${java.version}</jvmTarget>
                    <compilerPlugins>
                        <plugin>all-open</plugin>
                    </compilerPlugins>
                    <pluginOptions>
                        <option>all-open:annotation=jakarta.enterprise.context.ApplicationScoped</option>
                    </pluginOptions>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <executions>
                    <execution>
                        <id>default-compile</id>
                        <phase>none</phase>
                    </execution>
                    <execution>
                        <id>default-testCompile</id>
                        <phase>none</phase>
                    </execution>
                    <execution>
                        <id>compile</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>